# predictive-capacity

./: .gitignore  METRICS.md  README.md  crontab  docker-compose.yml  package-lock.json  ssl.yml  traefik.yml  train_models.sh
backend/: .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
backend/predictive_capacity/: __init__.py  api.py  schemas.py  upload.py  utils.py
backend/predictive_capacity/forecast/: forecast.py  metric.py  models.py
backend/predictive_capacity/warp10/: fetch_metric.py  find_set_metrics.py  get_label_name.py  get_metric_saturation.py  utils.py
backend/tests/: conftest.py  test_api.py  test_upload.py  test_utils.py
backend/tests/forecast/: test_make_forecast.py
backend/tests/warp10/: test_get_label_name.py  test_upload_gts.py  test_utils.py
forecast_api_lab/predictive_capacity/: api.py  utils.py
forecast_api_lab/predictive_capacity/forecast/: forecast.py  metric.py
forecast_api_lab/predictive_capacity/warp10/: upload_gts.py
forecast_api_lab/predictive_capacity/warp10/warpscripts/: find_set_metrics.mc2
forecast_api_lab/tests/: test_api.py  test_utils.py
front_lab/: README.MD
front_lab/src/: App.tsx  axiosInstance.ts
front_lab/src/components/ArrowChart/: ArrowChart.tsx
front_lab/src/components/ConfidenceLevel/: StarOutline.tsx
front_lab/src/components/Scatterplot/: Scatterplot.tsx
front_lab/src/components/TimeSeries/: index.ts
front_lab/src/components/header/: index.tsx
front_lab/src/pages/metrics/: list.tsx
frontend/: Dockerfile  README.MD  index.html  package-lock.json  package.json  pnpm-lock.yaml
frontend/src/: App.tsx  index.tsx  styles.css
frontend/src/components/ArrowChart/: Arrow.tsx  ArrowChart.tsx
frontend/src/components/ConfidenceLevel/: ConfidenceLevel.tsx  StarFilled.tsx  StarOutline.tsx
frontend/src/components/Scatterplot/: Scatterplot.tsx
frontend/src/components/TimeSeries/: LineChart.tsx  TimeSeries.tsx
frontend/src/components/header/: index.tsx
frontend/src/contexts/color-mode/: index.tsx
frontend/src/interfaces/: IDatacontext.ts  index.d.ts
frontend/src/pages/metrics/: list.tsx
stream_connector/: create_filters.sh  stream_connector.lua
