[tool.poetry]
name = "forecast_api"
version = "0.6.1"
description = "API to retrieve and make forecasts for predictive capacity service"
authors = [
    "Sami Mourched <smourched@centreon.com>",
    "Denis Roussel <droussel@centreon.com>",
]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
fastapi = "^0.92.0"
pywarp10 = { git = "https://github.com/centreon/pywarp10.git" }
numpy = "^1.24.2"
pandas = "^2"
requests = "^2.31.0"
scikit-learn = "^1.2.1"
pydantic = "^1.10.4"
boto3 = "^1.26.70"
botocore = "^1.29.70"
starlette = "^0.25.0"
httpx = "^0.23.3"
loguru = "^0.6.0"
pyjwt = { extras = ["crypto"], version = "^2.6.0" }
uvicorn = "^0.20.0"
mypy = "^1.4.1"
mypy-boto3 = "^1.28.11"
mypy-boto3-dynamodb = "^1.28.11"
mypy-boto3-s3 = "^1.28.12"
aeon = "^0.10.0"
lightgbm = "^4.0.0"
datetime = "^5.2"
optuna = "^3.3.0"

[tool.poetry.dev-dependencies]
pytest = "^7.2.1"
pytest-env = "^0.8.1"
pytest-mock = "^3.10.0"

[tool.poetry.group.dev.dependencies]
python-dotenv = "^1.0.0"
matplotlib = "^3.7.1"
ipykernel = "^6.22.0"
coverage = "^7.2.3"
coverage-badge = "^1.1.0"
moto = "^4.1.14"
black = "^24.3.0"
isort = "^5.12.0"
flake8-cognitive-complexity = "^0.1.0"
flake8 = "^6.1.0"

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
