[tool.poetry]
name = "predictive_capacity"
version = "0.6.1"
description = "API to retrieve and make forecasts for predictive capacity service"
authors = [
    "Sami Mourched <smourched@centreon.com>",
    "Denis Roussel <droussel@centreon.com>",
]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
pywarp10 = { git = "https://github.com/centreon/pywarp10.git" }
requests = "^2.31.0"
boto3 = "^1.26.70"
botocore = "^1.29.70"
pyjwt = { extras = ["crypto"], version = "^2.6.0" }
mypy = "^1.4.1"
mypy-boto3 = "^1.28.11"
mypy-boto3-dynamodb = "^1.28.11"
mypy-boto3-s3 = "^1.28.12"
lightgbm = "^4.0.0"
datetime = "^5.2"
fastapi = "^0.115.4"
aeon = "^0.11.1"
httpx = "^0.27.2"
loguru = "^0.7.2"
optuna = "^4.0.0"
pydantic = "^2.9.2"
pytest = "^8.3.3"
pytest-env = "^1.1.5"
scikit-learn = "^1.5.2"
uvicorn = "^0.32.0"

[tool.poetry.group.dev.dependencies]
python-dotenv = "^1.0.0"
matplotlib = "^3.7.1"
ipykernel = "^6.22.0"
coverage = "^7.2.3"
coverage-badge = "^1.1.0"
moto = "^5.0.11"
pytest-mock = "^3.10.0"
boto3-stubs = "^1.35.12"
types-tqdm = "^4.66.0.20240417"
pandas-stubs = "^2.2.2.240807"

[tool.pytest.ini_options]
env = [
    "AWS_ACCESS_KEY_ID=testing",
    "AWS_SECRET_ACCESS_KEY=testing",
    "AWS_SECURITY_TOKEN=testing",
    "AWS_SESSION_TOKEN=testing",
    "LOG_LEVEL=TRACE",
    "AWS_DEFAULT_REGION=us-east-1",
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
