[project]
name = "predictive_capacity"
version = "0.6.1"
description = "API to retrieve and make forecasts for predictive capacity service"
authors = [
    { name = "Sami Mourched", email = "smourched@centreon.com" },
    { name = "Denis Roussel", email = "droussel@centreon.com" },
]
requires-python = ">=3.10,<3.13"
dependencies = [
    "pywarp10",
    "requests>=2.31.0,<3",
    "boto3>=1.26.70,<2",
    "botocore>=1.29.70,<2",
    "pyjwt[crypto]>=2.6.0,<3",
    "mypy>=1.4.1,<2",
    "mypy-boto3>=1.28.11,<2",
    "mypy-boto3-dynamodb>=1.28.11,<2",
    "mypy-boto3-s3>=1.28.12,<2",
    "lightgbm>=4.6.0,<5",
    "datetime~=5.2",
    "fastapi>=0.115.4,<0.116",
    "aeon>=0.11.1,<0.12",
    "httpx>=0.27.2,<0.28",
    "loguru>=0.7.2,<0.8",
    "optuna>=4.0.0,<5",
    "pydantic>=2.9.2,<3",
    "pytest>=8.3.3,<9",
    "pytest-env>=1.1.5,<2",
    "scikit-learn>=1.5.2,<2",
    "uvicorn>=0.32.0,<0.33",
]

[dependency-groups]
dev = [
    "python-dotenv>=1.0.0,<2",
    "matplotlib>=3.7.1,<4",
    "ipykernel>=6.22.0,<7",
    "coverage>=7.2.3,<8",
    "coverage-badge>=1.1.0,<2",
    "moto>=5.0.11,<6",
    "pytest-mock>=3.10.0,<4",
    "boto3-stubs>=1.35.12,<2",
    "types-tqdm>=4.66.0.20240417,<5",
    "pandas-stubs>=2.2.2.240807,<3",
]

[tool.uv]

[tool.uv.sources]
pywarp10 = { git = "https://github.com/centreon/pywarp10.git" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
env = [
    "AWS_ACCESS_KEY_ID=testing",
    "AWS_SECRET_ACCESS_KEY=testing",
    "AWS_SECURITY_TOKEN=testing",
    "AWS_SESSION_TOKEN=testing",
    "LOG_LEVEL=TRACE",
    "AWS_DEFAULT_REGION=us-east-1",
]
